# GDS-challenge

./: README.md  main.ipynb  pyproject.toml
data/: test.csv  train.csv
